Fix alignment of publication filters

--- a/app/css/search.css
+++ b/app/css/search.css
@@ -108,7 +108,7 @@
 
 .resultfilters {
     margin-top: 70px;
-    width: 230px
+    width: 250px
 }
 
 .resultparams .affix{
